--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   google_fonts: ^6.2.1
   flutter_svg: ^2.2.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
